--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
     <!-- Contact -->
     <section class="contact container" id="contact">
         <h1>Contact for <br>Collaborations</h1>
-        <form action="" class="contact__form">
+        <form action="mailer/contact.php" method="POST" class="contact__form">
             <div class="contact__form-control">
                 <input type="text" id="name" name="name" placeholder="Name" class="contact__input">
             </div>
