--- a/thank-you.html
+++ b/thank-you.html
@@ -20,17 +20,17 @@
         <div class="navbar__desktop">
             <!-- Header -->
             <div class="navbar__desktop-header">
+                <a href="/contact.html" class="navbar__desktop-header-item">
+                    <img src="/assets/icons/cs.png" alt="C#">
+                    <p>contact.cs</p>
+                </a>
+                <a href="/books.html" class="navbar__desktop-header-item">
+                    <img src="/assets/icons/txt.png" alt="TXT">
+                    <p>books.txt</p>
+                </a>
                 <a class="navbar__desktop-header-item active">
-                    <img src="/assets/icons/js.png" alt="JavaScript">
-                    <p>resume.js</p>
-                </a>
-                <a href="/education.html" class="navbar__desktop-header-item">
-                    <img src="/assets/icons/html.png" alt="HTML">
-                    <p>education.html</p>
-                </a>
-                <a href="/experience.html" class="navbar__desktop-header-item">
-                    <img src="/assets/icons/css.png" alt="CSS">
-                    <p>experience.css</p>
+                    <img src="/assets/icons/php.png" alt="PHP">
+                    <p>thank-you.php</p>
                 </a>
                 <div class="navbar__desktop-header-filler"></div>
             </div>
@@ -40,10 +40,10 @@
                     <a href="/">
                         <img src="/assets/icons/welcome.png" alt="Welcome">
                     </a>
-                    <a href="/resume.html" class="active">
+                    <a href="/resume.html">
                         <img src="/assets/icons/copy.png" alt="Copy">
                     </a>
-                    <a href="/contact.html">
+                    <a href="/contact.html" class="active">
                         <img src="/assets/icons/email.png" alt="Email">
                     </a>
                 </div>
@@ -51,7 +51,7 @@
                     <a href="https://github.com/Nemanja734" target="_">
                         <img src="/assets/icons/github.png" alt="GitHub">
                     </a>
-                    <a href="https://www.linkedin.com/in/nemanja-tomic-1b1342259/" target="_">
+                    <a href="https://www.linkedin.com/in/nemanja-tomic-1b1342259" target="_">
                         <img src="/assets/icons/linkedin.png" alt="LinkedIn">
                     </a>
                 </div>
@@ -69,7 +69,7 @@
                 <h3>Menu</h3>
                 <div class="navbar__mobile-menu">
                     <a href="/" class="navbar__mobile-menu-item">Welcome</a>
-                    <a href="/resume.html" class="navbar__mobile-menu-item active">Resume</a>
+                    <a href="/resume.html" class="navbar__mobile-menu-item">Resume</a>
                     <a href="/education.html" class="navbar__mobile-menu-item">Education</a>
                     <a href="/experience.html" class="navbar__mobile-menu-item">Experience</a>
                     <a href="/books.html" class="navbar__mobile-menu-item">Books</a>
@@ -80,65 +80,22 @@
     </nav>
 
 
-    <!-- Resume -->
-    <section class="resume container">
-        <div class="resume__grid">
-            <!-- Profile Picture and Name -->
-            <div class="resume__name">
-                <img src="/assets/images/Bewerbungsfoto.jpg" alt="Picture of myself">
-                <div class="resume__name-text">
-                    <h1>Nemanja Tomic</h1>
-                    <h3>Business IT</h3>
-                    <h3>Web Design</h3>
-                    <h3>Cybersecurity</h3>
-                </div>
-            </div>
-
-            <!-- Profile Summary -->
-            <div class="resume__summary">
-                <h2>Profile Summary</h2>
-                <p class="resume__p">I am a meticulous Business Informatics Specialist with a diverse skill set that seamlessly blends
-                    technical expertise, analytical thinking, and client-facing capabilities. I possess proficiency in
-                    various programming languages and tools, including HTML, CSS, TypeScript, and C#, among others.
-                    Additionally, I have extensive experience in configuring and managing server services, automating
-                    tasks, and developing comprehensive test automation suites for applications.
-                </p>
-                <p>Are you in need of
-                    a professional to build your website, set up your server, or assist with a variety of IT-related
-                    tasks? Look no further — I am here to help! Feel free to explore my portfolio and existing projects
-                    for an overview of my experience. Whatever challenge you may be facing, I am committed to providing
-                    solutions tailored to your needs. You can reach out to me anytime through the contact page, either
-                    via email or by using the contact form provided. I look forward to collaborating with you!
-                </p>
-            </div>
-
-            <!-- Skillset -->
-            <div class="resume__skillset">
-                <div>
-                    <h2>Technical Skillset</h2>
-                    <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>JavaScript</li>
-                        <li>TypeScript</li>
-                        <li>PHP</li>
-                        <li>C#</li>
-                        <li>Python</li>
-                        <li>SQL</li>
-                        <li>Server Administration</li>
-                        <li>Mail Server Configuration</li>
-                        <li>And much more!</li>
-                    </ul>
-                </div>
-                <div>
-                    <h2>Languages</h2>
-                    <ul>
-                        <li>German</li>
-                        <li>English</li>
-                        <li>Serbian</li>
-                    </ul>
-                </div>
-            </div>
+    <section class="thank-you container" id="thank-you">
+        <h1>Thank you!</h1><br>
+        <h4>Thank you for your interest,</h4><br>
+        <p>I have received your message and will respond swiftly. Please be patient for the moment. I typically respond within 24 hours.</p><br>
+        <p>If you have an urgent request, feel free to call me.</p><br>
+        <p>With kind regards,</p>
+        <p><strong>Nemanja Tomic</strong></p><br>
+            
+        <p>Follow me on:</p>
+        <div class="thank-you__social">
+            <a href="https://www.linkedin.com/in/nemanja-tomic-1b1342259" target="_blank">LinkedIn</a> |
+            <a href="https://github.com/Nemanja734" target="_blank">GitHub</a>
+        </div>
+        
+        <div class="thank-you__button">
+            <a href="/" class="btn-1">Back to Home</a>
         </div>
     </section>
 
